very big refactoring and new functionalities