@@ -1,15 +1,26 @@
 package pl.btsoftware.ship.game.board;
 
-import pl.btsoftware.ship.game.events.EventField;
-import pl.btsoftware.ship.game.events.FieldId;
+import pl.btsoftware.ship.game.events.EventFieldDto;
+import pl.btsoftware.ship.game.playerPosition.PlayerPositionDto;
+import pl.btsoftware.ship.shared.PositionOnBoard;
+import pl.btsoftware.ship.shared.Round;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
+
+import static java.util.Collections.emptyList;
 
 class BoardCreator {
-    static Board create(List<PlayerSituation> playersInGame, List<EventField> eventFields) {
-        Board board = new Board();
+    private BoardCreator() {
+        throw new IllegalStateException("Utility class");
+    }
+
+    static Board create() {
+        return create(emptyList(), emptyList(), Round.PREPARING);
+    }
+
+    static Board create(List<PlayerPositionDto> playersInGame, List<EventFieldDto> eventFields, Round round) {
+        var board = new Board(round);
         board.createRow(createFirstLine(playersInGame, eventFields));
         board.createRow(createSecondLine(playersInGame, eventFields));
         board.createRow(createThirdLine(playersInGame, eventFields));
@@ -23,9 +34,9 @@ class BoardCreator {
         return board;
     }
 
-    private static List<Field> createFirstLine(List<PlayerSituation> playersInGame, List<EventField> events) {
+    private static List<Field> createFirstLine(List<PlayerPositionDto> playersInGame, List<EventFieldDto> events) {
         List<Field> fields = new ArrayList<>();
-        int line = 1;
+        var line = 1;
         fields.add(createField(1, line, 770, playersInGame, events));
         fields.add(createField(2, line, 760, playersInGame, events));
         fields.add(createField(3, line, 750, playersInGame, events));
@@ -38,9 +49,9 @@ class BoardCreator {
         return fields;
     }
 
-    private static List<Field> createSecondLine(List<PlayerSituation> playersInGame, List<EventField> events) {
+    private static List<Field> createSecondLine(List<PlayerPositionDto> playersInGame, List<EventFieldDto> events) {
         List<Field> fields = new ArrayList<>();
-        int line = 2;
+        var line = 2;
         fields.add(createField(1, line, 810, playersInGame, events));
         fields.add(createField(2, line, 840, playersInGame, events));
         fields.add(createField(3, line, 830, playersInGame, events));
@@ -53,9 +64,9 @@ class BoardCreator {
         return fields;
     }
 
-    private static List<Field> createThirdLine(List<PlayerSituation> playersInGame, List<EventField> events) {
+    private static List<Field> createThirdLine(List<PlayerPositionDto> playersInGame, List<EventFieldDto> events) {
         List<Field> fields = new ArrayList<>();
-        int line = 3;
+        var line = 3;
         fields.add(createField(1, line, 860, playersInGame, events));
         fields.add(createField(2, line, 870, playersInGame, events));
         fields.add(createField(3, line, 860, playersInGame, events));
@@ -68,9 +79,9 @@ class BoardCreator {
         return fields;
     }
 
-    private static List<Field> createFourthLine(List<PlayerSituation> playersInGame, List<EventField> events) {
+    private static List<Field> createFourthLine(List<PlayerPositionDto> playersInGame, List<EventFieldDto> events) {
         List<Field> fields = new ArrayList<>();
-        int line = 4;
+        var line = 4;
         fields.add(createField(1, line, 950, playersInGame, events));
         fields.add(createField(2, line, 940, playersInGame, events));
         fields.add(createField(3, line, 940, playersInGame, events));
@@ -83,9 +94,9 @@ class BoardCreator {
         return fields;
     }
 
-    private static List<Field> createFifthLine(List<PlayerSituation> playersInGame, List<EventField> events) {
+    private static List<Field> createFifthLine(List<PlayerPositionDto> playersInGame, List<EventFieldDto> events) {
         List<Field> fields = new ArrayList<>();
-        int line = 5;
+        var line = 5;
         fields.add(createField(1, line, 1000, playersInGame, events));
         fields.add(createField(2, line, 1000, playersInGame, events));
         fields.add(createField(3, line, 1010, playersInGame, events));
@@ -98,9 +109,9 @@ class BoardCreator {
         return fields;
     }
 
-    private static List<Field> createSixthLine(List<PlayerSituation> playersInGame, List<EventField> events) {
+    private static List<Field> createSixthLine(List<PlayerPositionDto> playersInGame, List<EventFieldDto> events) {
         List<Field> fields = new ArrayList<>();
-        int line = 6;
+        var line = 6;
         fields.add(createField(1, line, 1050, playersInGame, events));
         fields.add(createField(2, line, 1060, playersInGame, events));
         fields.add(createField(3, line, 1050, playersInGame, events));
@@ -113,9 +124,9 @@ class BoardCreator {
         return fields;
     }
 
-    private static List<Field> createSeventhLine(List<PlayerSituation> playersInGame, List<EventField> events) {
+    private static List<Field> createSeventhLine(List<PlayerPositionDto> playersInGame, List<EventFieldDto> events) {
         List<Field> fields = new ArrayList<>();
-        int line = 7;
+        var line = 7;
         fields.add(createField(1, line, 1110, playersInGame, events));
         fields.add(createField(2, line, 1120, playersInGame, events));
         fields.add(createField(3, line, 1150, playersInGame, events));
@@ -128,9 +139,9 @@ class BoardCreator {
         return fields;
     }
 
-    private static List<Field> createEighthLine(List<PlayerSituation> playersInGame, List<EventField> events) {
+    private static List<Field> createEighthLine(List<PlayerPositionDto> playersInGame, List<EventFieldDto> events) {
         List<Field> fields = new ArrayList<>();
-        int line = 8;
+        var line = 8;
         fields.add(createField(1, line, 1200, playersInGame, events));
         fields.add(createField(2, line, 1200, playersInGame, events));
         fields.add(createField(3, line, 1210, playersInGame, events));
@@ -143,9 +154,9 @@ class BoardCreator {
         return fields;
     }
 
-    private static List<Field> createNinthLine(List<PlayerSituation> playersInGame, List<EventField> events) {
+    private static List<Field> createNinthLine(List<PlayerPositionDto> playersInGame, List<EventFieldDto> events) {
         List<Field> fields = new ArrayList<>();
-        int line = 9;
+        var line = 9;
         fields.add(createField(1, line, 1270, playersInGame, events));
         fields.add(createField(2, line, 1280, playersInGame, events));
         fields.add(createField(3, line, 1300, playersInGame, events));
@@ -158,12 +169,12 @@ class BoardCreator {
         return fields;
     }
 
-    private static Field createField(int x, int y, int maxWeight, List<PlayerSituation> playersInGame, List<EventField> events) {
-        boolean isStartPoint = y == 1;
-        boolean isEndPoint = y == 9 && (x == 4 || x == 5);
+    private static Field createField(int x, int y, int maxWeight, List<PlayerPositionDto> playersInGame, List<EventFieldDto> events) {
+        var isStartPoint = y == 1;
+        var isEndPoint = y == 9 && (x == 4 || x == 5);
         return new Field(x, y, maxWeight,
-                events.stream().filter(event -> event.fieldId().equals(new FieldId(x, y))).map(event -> new Field.SpecialField(event.kind())).findFirst().orElse(null),
-                playersInGame.stream().filter(playerSituation -> playerSituation.getCoordinates() != null && playerSituation.getCoordinates().equals(new PositionOnBoard(x, y))).map(playerSituation -> new Field.Player(playerSituation.getPlayerName().getName(), playerSituation.getCountry())).collect(Collectors.toList()),
+                events.stream().filter(event -> event.position().equals(new PositionOnBoard(x, y))).map(event -> new Field.SpecialField(event.kind())).findFirst().orElse(null),
+                playersInGame.stream().filter(playerSituation -> playerSituation.coordinates() != null && playerSituation.coordinates().equals(new PositionOnBoard(x, y))).map(playerSituation -> new Field.Player(playerSituation.playerName().value(), playerSituation.country())).toList(),
                 isStartPoint, isEndPoint);
     }
 }
