@@ -3,13 +3,13 @@ package pl.btsoftware.ship.game.events;
 import lombok.AllArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import pl.btsoftware.ship.game.board.PositionOnBoard;
-import pl.btsoftware.ship.game.playerInGame.PlayerNextActionDto;
-import pl.btsoftware.ship.registration.game.GameEntity;
-import pl.btsoftware.ship.registration.game.GameName;
+import pl.btsoftware.ship.game.events.exception.EventNotFoundException;
+import pl.btsoftware.ship.game.playerPosition.PlayerMoveService;
+import pl.btsoftware.ship.shared.GameName;
+import pl.btsoftware.ship.shared.PositionOnBoard;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 
 @Service
 @AllArgsConstructor
@@ -18,40 +18,41 @@ public class EventsService {
     private final EventsInGameRepository eventsInGameRepository;
     private final EventRewardRepository eventRewardRepository;
 
-    public List<EventField> findAllInGame(GameName gameName) {
-        return eventsInGameRepository.findAllByGame_Name(gameName).stream().map(event -> new EventField(event.getId(), event.getType())).collect(Collectors.toList());
+    public List<EventFieldDto> findAllInGame(GameName gameName) {
+        return eventsInGameRepository.findAllById_Game(gameName).stream().map(event -> new EventFieldDto(event.mapId(), event.getType())).toList();
     }
 
-    public void copyAllToGame(GameEntity newGame) {
+    public void copyAllToGame(GameName newGame) {
         List<EventEntity> events = eventsRepository.findAll();
-        List<EventInGameEntity> eventsInGameEntities = events.stream().map(event -> EventInGameEntity.from(event, newGame)).collect(Collectors.toList());
+        List<EventInGameEntity> eventsInGameEntities = events.stream().map(event -> EventInGameEntity.from(event, newGame)).toList();
         eventsInGameRepository.saveAll(eventsInGameEntities);
     }
 
     @Transactional(readOnly = true)
-    public EventReward findEvent(PositionOnBoard playerPosition, GameName gameName) {
-        EventInGameEntity event = eventsInGameRepository.findByIdAndGame_Name(FieldId.from(playerPosition), gameName);
-        if (event == null) {
-            return EventReward.from(playerPosition);
-        }
-        PlayerNextActionDto playerNextAction = new PlayerNextActionDto(event.getTitle(), event.getDescription(), event.getNextAction(), event.getType());
-
-        return EventReward.from(playerPosition, playerNextAction);
+    public Optional<EventSnapshot> findEvent(PositionOnBoard playerPosition, GameName game) {
+        return eventsInGameRepository.findById(FieldGameId.from(game, playerPosition))
+                .map(EventSnapshot::from);
     }
 
-    @Deprecated
-    @Transactional
-    public EventReward findReward(PositionOnBoard playerPosition, GameName gameName) {
-        EventInGameEntity event = eventsInGameRepository.findByIdAndGame_Name(FieldId.from(playerPosition), gameName);
-        if (event == null) {
-            return EventReward.from(playerPosition);
-        }
-        PlayerNextActionDto playerNextAction = new PlayerNextActionDto(event.getTitle(), event.getDescription(), event.getNextAction(), event.getType());
-        if (event.isRemovable()) {
-            eventsInGameRepository.delete(event);
-        }
+    @Transactional(readOnly = true)
+    EventDescription findEventDescription(PositionOnBoard playerPosition) {
+        return eventsRepository.findById(FieldId.from(playerPosition)).map(EventDescription::from).orElseThrow(EventNotFoundException::new);
+    }
 
-        EventRewardEntity eventReward = eventRewardRepository.findByPositionOnBoard(playerPosition);
-        return EventReward.from(playerPosition, playerNextAction, eventReward);
+    @Transactional(readOnly = true)
+    public EventRewardSnapshot findReward(PositionOnBoard playerPosition) {
+        return eventRewardRepository.findByPositionOnBoard(playerPosition)
+                .map(EventRewardSnapshot::from)
+                .orElse(EventRewardSnapshot.from(playerPosition));
+    }
+
+    void removeReward(GameName game, PositionOnBoard position) {
+        eventsInGameRepository.deleteById(FieldGameId.from(game, position));
+    }
+
+    record EventDescription(String title, String description) {
+        static EventDescription from(EventEntity event) {
+            return new EventDescription(event.getTitle(), event.getDescription());
+        }
     }
 }
